# gomoku-ai

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  training.rs
src/eval/: mod.rs
src/game/: analyze.rs  board.rs  mod.rs  play.rs
src/inference/: mod.rs
src/mcts/: game.rs  mod.rs  node.rs  table.rs
src/network/: cnn.rs  mod.rs  pos_encoding.rs  residual.rs  rope.rs  transformer.rs
src/selfplay/: mod.rs
src/training/: buffer.rs  loss_scaler.rs  lr_schedule.rs  metrics.rs  mod.rs  trainer.rs
