[package]
name = "gomoku-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", features = [
    "std",
    "autodiff",
    "train",
    "optim",
    "cuda",
    "fusion",
], default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
indicatif = "0.18.5"
rand = "0.10.1"
rand_distr = "0.6.0"
ratatui = "0.30.2"
rayon = "1.12.0"
serde = "1.0.228"

[profile.dev.package."*"]
opt-level = 3
